# diff-xjoules

./: .gitignore  Cargo.toml  README.md
.github/workflows/: diff-jjoules-checkstyle.yml  diff-jjoules.yml  diff-jsjoules-checkstyle.yml  diff-jsjoules.yml  diff-rsjoules-checkstyle.yml  diff-rsjoules.yml  diff-xjoules-checkstyle.yml  diff-xjoules-format-check.yml  diff-xjoules.yml
changelog-generator/: README.md  changelog.js  package.json
diff-jjoules/: README.md  configuration_file_example.yaml  gson.yaml  pom.xml
diff-jjoules/src/main/java/fr/davidson/diff_jjoules/: Configuration.java  Main.java
diff-jjoules/src/main/java/fr/davidson/diff_jjoules/steps/: Step.java  StepEnum.java
diff-jjoules/src/main/resources/: simplelogger.properties
diff-jjoules/src/test/resources/: test_read_json.json  test_selection.json
diff-jjoules/src/test/resources/diff-jjoules-toy-java-project/: pom.xml
diff-jjoules/src/test/resources/diff-jjoules-toy-java-project-v2/: pom.xml
diff-jsjoules/: .eslintrc.json  README.md  configuration_file_example.yaml  configuration_file_jscodeshift.yaml  diff-jsjoules.js  package.json
diff-jsjoules/src/: diff-jsjoules-instr.js  diff-jsjoules.js  diff-jsjoules.test.js  instrumentation.js
diff-jsjoules/test_resources/: coverage_jest.json  data.json  diff  test_selection.json
diff-jsjoules/test_resources/diff-jsjoules-toy-nodejs-project-v2/: package.json
diff-jsjoules/test_resources/diff-jsjoules-toy-nodejs-project-v2/src/: app.js
diff-jsjoules/test_resources/diff-jsjoules-toy-nodejs-project/src/: app.test.js  untouched-app.js
diff-rsjoules/: Cargo.toml  README.md
diff-rsjoules/src/: main.rs  tasks.rs
diff-rsjoules/src/tasks/: coverage_task.rs  execution_task.rs  instrumentation_task.rs
doc/: advanced_configuration.md  approach.md  contributing.md  coverage.md  execution.md  instrumentation.md  mark_strategies.md  test_filters.md
src/: fr_davidson_diff_xjoules.rs  lib.rs  main.rs
src/fr_davidson_diff_xjoules/: configuration.rs  diff_data.rs  diff_xjoules_data.rs  measure.rs  steps.rs  utils.rs
src/fr_davidson_diff_xjoules/measure/: data.rs  test_measure.rs  version_measure.rs
src/fr_davidson_diff_xjoules/steps/: test_delta.rs  test_execution.rs  test_instrumentation.rs  test_mark.rs  test_selection.rs
src/fr_davidson_diff_xjoules/steps/test_mark/: mark_strategy.rs  test_filter.rs
src/fr_davidson_diff_xjoules/steps/test_mark/mark_strategy/: aggregate_mark_strategy.rs  code_coverage_mark_strategy.rs  diff_coverage_mark_strategy.rs  strict_mark_strategy.rs  vote_mark_strategy.rs
src/fr_davidson_diff_xjoules/steps/test_mark/test_filter/: all_test_filter.rs  empty_intersection_test_filter.rs  student_t_test_test_filter.rs
src/fr_davidson_diff_xjoules/utils/: command.rs  coverage.rs  files_utils.rs  json.rs  json_utils.rs  math.rs  yaml_utils.rs
test_resources/: AppTest.java.v1  AppTest.java.v2  configuration_file_example.yaml  coverage.json  coverage_v1.json  coverage_v2.json  data_v1.json  data_v2.json  delta.json  expected_diff  gson_diff  input.json  measurements_v1.json  measurements_v2.json  test_filter_selection.json
(+51 files in other folders)
