[package]
name = "diff-xjoules"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2"
clap = { version = "3.0", features = ["derive"] }

serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
serde_yaml = "0.8"
rand = "0.8.5"
handlebars = "3"