[package]
name = "diff-xjoules"
version = "1.0.0"
edition = "2021"
authors = ["Benjamin Danglot <bdanglot@gmail.com>"]
description = " diff-xjoules is a tool to run in your continuous integration to measure the impact of commits on the energy consumption of the program"
documentation = "https://github.com/davidson-consulting/diff-xjoules/tree/main/doc"
homepage = "https://davidson-consulting.github.io/diff-xjoules/"
readme = "https://github.com/davidson-consulting/diff-xjoules/blob/main/README.md"
repository = "https://github.com/davidson-consulting/diff-xjoules"
keywords = ["sustainability", "continuous-integration"]

[dependencies]
clap = { version = "3.0", features = ["derive"] }

serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
serde_yaml = "0.8"
rand = "0.8.5"
handlebars = "3"